# byteable

./: .clineignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  test_cursor.rs
benches/: benchmarks.rs
byteable_derive/: Cargo.toml  README.md
byteable_derive/src/: lib.rs
examples/: README.md  cursor_usage.rs  enum_endianness.rs  file_format.rs  file_io.rs  getting_started.rs  network_protocol.rs  simple_usage.rs  testing.rs  try_io.rs
src/: async_io.rs  byte_array.rs  byteable.rs  byteable_trait.rs  core_types.rs  derive_safety_helpers.rs  endian.rs  io.rs  lib.rs  ordered_float_types.rs  std_types.rs  std_types_async.rs
tests/: async_io_test.rs  collections_io_test.rs  delegate_macro_test.rs  derive_enums.rs  derive_field_enums.rs  derive_structs.rs  enum_test.rs  field_enum_test.rs  fixed_async_io_test.rs  fixed_io_test.rs  io_async.rs  io_struct_test.rs  io_sync.rs  io_test.rs  ordered_float.rs  ordered_float_test.rs  playground.rs  primitive_types_test.rs  safety_validation_test.rs  std_types_test.rs  transparent_test.rs  try_transparent.rs  try_transparent_test.rs  tuple_struct_test.rs  type_impls.rs  u128_test.rs  unit_struct_test.rs  visibility_test.rs
