[package]
name = "byteable"
version = "0.20.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/PaulDepping/byteable"
description = "A Rust crate for convenient serialization and deserialization of byte-oriented data."
readme = "README.md"

[features]
all = ["derive", "tokio", "std"]
default = ["derive", "std"]
derive = ["dep:byteable_derive"]
std = []
tokio = ["dep:tokio", "std"]

[dependencies]
byteable_derive = { version = "0.10.0", path = "byteable_derive", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[example]]
name = "cursor_usage"
required-features = ["std"]

[[example]]
name = "file_io"
required-features = ["std"]

[[bench]]
name = "benchmarks"
harness = false
