[package]
name = "byteable"
version = "0.24.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/PaulDepping/byteable"
description = "A Rust crate for convenient serialization and deserialization of byte-oriented data."
readme = "README.md"

[features]
all = ["derive", "tokio", "std"]
default = ["derive", "std"]
derive = ["dep:byteable_derive"]
std = []
tokio = ["dep:tokio", "std"]

[dependencies]
byteable_derive = { version = "0.12.1", path = "byteable_derive", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8", features = ["html_reports"] }
thiserror = "2.0.17"

[[example]]
name = "cursor_usage"
required-features = ["std", "derive"]

[[example]]
name = "file_io"
required-features = ["std", "derive"]

[[example]]
name = "simple_usage"
required-features = ["derive"]

[[example]]
name = "enum_endianness"
required-features = ["derive"]

[[example]]
name = "try_io"
required-features = ["std", "derive"]

[[bench]]
name = "benchmarks"
harness = false
