[package]
name = "byteable"
version = "0.31.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/PaulDepping/byteable"
description = "A Rust crate for convenient serialization and deserialization of byte-oriented data."
readme = "README.md"

[features]
all = ["derive", "tokio", "std", "ordered-float"]
default = ["derive", "std"]
derive = ["dep:byteable_derive"]
std = []
tokio = ["dep:tokio", "std"]
ordered-float = ["dep:ordered-float"]

[dependencies]
byteable_derive = { version = "0.19.0", path = "byteable_derive", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }
ordered-float = { version = "5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8", features = ["html_reports"] }
thiserror = "2.0.18"

[[example]]
name = "getting_started"
required-features = ["std", "derive"]

[[example]]
name = "network_protocol"
required-features = ["std", "derive"]

[[example]]
name = "file_format"
required-features = ["std", "derive"]

[[bench]]
name = "benchmarks"
harness = false
