[package]
name = "byteable_derive"
version = "0.7.0"
edition = "2024"
description = "Custom derive macros for the byteable crate."
license = "MIT"
repository = "https://github.com/PaulDepping/byteable"
readme = "README.md"

[dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

[lib]
proc-macro = true
