[package]
name = "byteable_derive"
version = "0.18.0"
edition = "2024"
description = "Custom derive macros for the byteable crate."
license = "MIT"
repository = "https://github.com/PaulDepping/byteable"
readme = "README.md"

[dependencies]
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

[lib]
proc-macro = true
